chore: remove /validator-addresses
